--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,10 @@ header nav a:hover{
   padding: 8px;
 }
 
-#about #myinfo{
-  text-align: center;
-}
-
 #about #myinfo, #phrase{
   font-size: 16px;
   padding: 16px;
+  text-align: center;
 }
 
 #about p{
@@ -232,10 +229,13 @@ header nav a:hover{
   header h3 span{
     display: inline;
   }
-  
 
   header nav{
     gap: 32px;
+  }
+
+  #about #myinfo, #phrase{
+    text-align: left;
   }
 
   #skills div{
